# BotForge

./: .dockerignore  .env.example  .gitignore  COMMERCIAL-LICENSE  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  ‎COMMERCIAL-LICENSE
.github/workflows/: lint.yml  tests.yml
bot_profiles/default_dev/: profile.json  system_prompt.md
bot_profiles/nutrition/: demo_plan.json  profile.json  system_prompt.md
docs/: beta-release-checklist.md  privacy-and-retention.md  usage-policy.md
migrations/: env.py
migrations/versions/: 20260505_0001_create_users.py  20260507_0002_add_user_roles.py  20260507_0002_create_invite_tokens.py  20260507_0003_create_invite_tokens.py  20260508_0004_create_policy_acceptances.py  20260512_0005_add_campaign_invites.py  20260513_0006_create_inbound_messages.py  20260518_0007_add_user_deletion_controls.py  20260519_0008_create_conversation_memory.py  20260524_0009_add_langchain_chat_memory.py  20260524_0010_create_nutrition_daily_logs.py  20260524_0011_add_langchain_history_window_index.py  20260524_0012_create_nutrition_plans.py  20260524_0013_split_nutrition_plan_documents.py
scripts/: backup_database.sh  restore_database.sh
src/: template.env
src/bot/: __init__.py  engine.py  handlers.py  main.py  router.py
src/forge_bot/: __init__.py  bootstrap_admin_invite.py  bot_profile.py  main.py  (+14 more)
tasks/: README.md  customer-journeys.md  product-vision-user-stories.md
tests/: helpers.py  test_admin_memory.py  test_auth.py  test_auth_guard.py  test_bootstrap_admin_invite.py  test_bot_profile.py  test_campaign_invite.py  test_campaign_invite_database.py  test_command_imports.py  test_config.py  test_database.py  test_debug_conversation_log.py  test_get_plan.py  test_help.py  test_invite.py  test_invite_auth.py  test_main.py  test_memory_backend.py  test_memory_store.py  test_message_store.py  test_migrations.py  test_nutrition_daily_state.py  test_nutrition_intent.py  test_nutrition_live_nvidia.py  test_nutrition_orchestrator.py  test_nutrition_plan_store.py  test_nutrition_router.py  test_operations_hardening.py  test_policy.py  test_privacy_controls.py  test_rate_limits.py  test_request_lifecycle.py  test_request_state.py  test_roles.py  test_runtime_safety.py  test_set_plan.py
(+37 files in other folders)
